--- a/src/main/webapp/WEB-INF/front/template/style/basic.css
+++ b/src/main/webapp/WEB-INF/front/template/style/basic.css
@@ -1382,7 +1382,7 @@ a.backToTop:hover {background-color: #333;}
 	.offset6 {margin-left: 500px;}
 	.offset5 {margin-left: 420px;}
 	.offset4 {margin-left: 340px;}
-	.offset3 {margin-left: 225px;}
+	.offset3 {margin-left: 235px;}/*原来是225*/
 	.offsetindex3{margin-left:240px;}
 	.offset2 {margin-left: 180px;}
 	.offset1 {margin-left: 100px;}
