--- a/src/main/webapp/WEB-INF/front/test/css/basic.css
+++ b/src/main/webapp/WEB-INF/front/test/css/basic.css
@@ -10,7 +10,7 @@ body {
 	padding: 0px 5px; 
 	
 }
-.block-div .panel.page-panel{ margin-bottom: 15px; height: 339px;}
+.block-div .panel.page-panel{ margin-bottom: 15px; min-height: 345px;}
 .block-div .panel.panel-index-top{ height: auto;}
 .block-div .panel-heading {
     font-weight: bold;
