--- a/src/main/webapp/WEB-INF/front/css/basic.css
+++ b/src/main/webapp/WEB-INF/front/css/basic.css
@@ -48,3 +48,7 @@ body {
 	color:#696969;
 }
 .list ul li>a:hover{color:#de3237;text-decoration:underline;}
+
+.side-div{
+	border: 1px solid #E8E8E8;
+}
