--- a/src/main/webapp/WEB-INF/front/css/article.css
+++ b/src/main/webapp/WEB-INF/front/css/article.css
@@ -9,6 +9,13 @@
 	text-indent: 28px;
 	margin-bottom: 25px;
 }
+@media screen and (max-width: 768px) { 
+	.article-content img{
+		width:100%;
+		max-width:500px;
+	}
+} 
+
 /* 评论 */
 .article-commend h3{
 	margin-top: 30px;
